CBOR: remove the X11 True and False for good

I don't care if you still need X11 headers. If you do, you know your
workarounds.

Pick-to: 5.15
Fixes: QTBUG-88591
Change-Id: If51855da004b4f3fbf43fffd1648a357eab2d865
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>