src/corelib/serialization/qcborstreamwriter.h
@@ -51,8 +51,8 @@
 
 QT_REQUIRE_CONFIG(cborstreamwriter);
 
-// See qcborcommon.h for why we check
-#if defined(QT_X11_DEFINES_FOUND)
+/* X11 headers use these values too, but as defines */
+#if defined(False) && defined(True)
 #  undef True
 #  undef False
 #endif
